--- a/MVVM/MVVM/View/UsersCell.xib
+++ b/MVVM/MVVM/View/UsersCell.xib
@@ -20,35 +20,35 @@
                         <rect key="frame" x="10" y="10" width="549" height="100"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="HKd-Vb-CdI">
-                                <rect key="frame" x="10" y="10" width="529" height="80"/>
+                                <rect key="frame" x="15" y="15" width="519" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Xa-gw-cEo">
-                                        <rect key="frame" x="0.0" y="0.0" width="529" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="519" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSq-5a-o4X">
-                                        <rect key="frame" x="0.0" y="30" width="529" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="25.5" width="519" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6U-5w-0Nt">
-                                        <rect key="frame" x="0.0" y="59.5" width="529" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="50.5" width="519" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
-                            <constraint firstItem="HKd-Vb-CdI" firstAttribute="leading" secondItem="eMC-wf-Zfz" secondAttribute="leading" constant="10" id="4vd-6l-ZOf"/>
-                            <constraint firstAttribute="bottom" secondItem="HKd-Vb-CdI" secondAttribute="bottom" constant="10" id="7N2-x6-DUj"/>
-                            <constraint firstAttribute="trailing" secondItem="HKd-Vb-CdI" secondAttribute="trailing" constant="10" id="chG-O9-ybD"/>
-                            <constraint firstItem="HKd-Vb-CdI" firstAttribute="top" secondItem="eMC-wf-Zfz" secondAttribute="top" constant="10" id="fpR-0m-p7C"/>
+                            <constraint firstItem="HKd-Vb-CdI" firstAttribute="leading" secondItem="eMC-wf-Zfz" secondAttribute="leading" constant="15" id="4vd-6l-ZOf"/>
+                            <constraint firstAttribute="bottom" secondItem="HKd-Vb-CdI" secondAttribute="bottom" constant="15" id="7N2-x6-DUj"/>
+                            <constraint firstAttribute="trailing" secondItem="HKd-Vb-CdI" secondAttribute="trailing" constant="15" id="chG-O9-ybD"/>
+                            <constraint firstItem="HKd-Vb-CdI" firstAttribute="top" secondItem="eMC-wf-Zfz" secondAttribute="top" constant="15" id="fpR-0m-p7C"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -68,8 +68,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
